--- a/.atom/linting/.eslintrc
+++ b/.atom/linting/.eslintrc
@@ -4,5 +4,6 @@
   "extends": "airbnb",
   "rules": {
   	"comma-dangle": ["error", "never"],
+  	"no-console": ["error", {"allow": ["log"]}]
   }
 }
