Updated 3D printing profiles

--- a/wilsonII_200microns.ini
+++ b/wilsonII_200microns.ini
@@ -1,12 +1,11 @@
 [profile]
-layer_height = 0.24
-wall_thickness = 1.5
+layer_height = 0.20
+wall_thickness = 1.2
 retraction_enable = True
-solid_layer_thickness = 0.72
-fill_density = 20
-nozzle_size = 0.4
-print_speed = 25
-print_temperature = 200
+solid_layer_thickness = 0.80
+fill_density = 40
+print_speed = 65
+print_temperature = 190
 print_temperature2 = 0
 print_temperature3 = 0
 print_temperature4 = 0
@@ -23,21 +22,22 @@ filament_diameter2 = 0
 filament_diameter3 = 0
 filament_diameter4 = 0
 filament_diameter5 = 0
-filament_flow = 97.0
+filament_flow = 98.0
+nozzle_size = 0.4
 retraction_speed = 35
-retraction_amount = 4
+retraction_amount = 4.5
 retraction_dual_amount = 16.5
 retraction_min_travel = 1.5
 retraction_combing = All
 retraction_minimal_extrusion = 0.02
-retraction_hop = 0.0
-bottom_thickness = 0.24
+retraction_hop = 0.1
+bottom_thickness = 0
 layer0_width_factor = 110
 object_sink = 0.0
 overlap_dual = 0.15
-travel_speed = 100.0
-bottom_layer_speed = 20
-infill_speed = 0.0
+travel_speed = 70.0
+bottom_layer_speed = 35
+infill_speed = 50.0
 solidarea_speed = 0.0
 inset0_speed = 0.0
 insetx_speed = 0.0
@@ -54,6 +54,7 @@ cool_head_lift = False
 solid_top = True
 solid_bottom = True
 fill_overlap = 15
+perimeter_before_infill = False
 support_type = Lines
 support_angle = 60
 support_fill_rate = 15
@@ -77,7 +78,16 @@ fix_horrible_union_all_type_a = True
 fix_horrible_union_all_type_b = False
 fix_horrible_use_open_bits = False
 fix_horrible_extensive_stitching = False
-plugin_config = 
+plugin_config = (lp1
+	(dp2
+	S'params'
+	p3
+	(dp4
+	sS'filename'
+	p5
+	S'TweakAtZ.py'
+	p6
+	sa.
 object_center_x = -1
 object_center_y = -1
 
@@ -94,7 +104,7 @@ start.gcode = ;Sliced at: {day} {date} {time}
 	M82        ;set extruder to absolute mode
 	M107       ;start with the fan off
 	G28 X0 Y0  ;move X/Y to min endstops
-	;G28 Z0     ;move Z to min endstops
+	G28 Z0     ;move Z to min endstops
 	;G1 Z15.0 F{travel_speed} ;move the platform down 15mm
 	G92 E0                  ;zero the extruded length
 	G1 F200 E3              ;extrude 3mm of feed stock
