--- a/razer.conf
+++ b/razer.conf
@@ -27,8 +27,8 @@
 	led=1:Scrollwheel:on
 	mode=1:GlowingLogo:static
 	mode=1:Scrollwheel:static
-	color=1:GlowingLogo:25E4BC
-	color=1:Scrollwheel:25E4BC
+	color=1:GlowingLogo:8839FF
+	color=1:Scrollwheel:8839FF
 
 # Razer DeathAdder mouse
 [Mouse:DeathAdder*:*:*]
