Changed colors for razer deathadder

--- a/razer.conf
+++ b/razer.conf
@@ -27,8 +27,8 @@
 	led=1:Scrollwheel:on
 	mode=1:GlowingLogo:static
 	mode=1:Scrollwheel:static
-	color=1:GlowingLogo:4e00FF
-	color=1:Scrollwheel:4e00FF
+	color=1:GlowingLogo:42f48c
+	color=1:Scrollwheel:42f48c
 
 # Razer DeathAdder mouse
 [Mouse:DeathAdder*:*:*]
